@@ -11,6 +11,7 @@ configure
 depcomp
 compile
 install-sh
+test-driver
 missing
 mod_gearman2.o
 mod_gearman2.so
